--- a/royal-ios/Base.lproj/Main.storyboard
+++ b/royal-ios/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Royal" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K95-Wm-Iko">
-                                <rect key="frame" x="165" y="59" width="84" height="39"/>
+                                <rect key="frame" x="168.5" y="59" width="77" height="39"/>
                                 <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="30"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -28,19 +28,26 @@
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="82" id="Iwq-Kv-B6W"/>
-                                    <constraint firstAttribute="width" constant="414" id="kDa-hK-kgX"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <color key="tintColor" red="1" green="0.69019607839999997" blue="0.22352941179999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Transferências Recentes">
                                     <color key="titleColor" red="1" green="0.69019607843137254" blue="0.22352941176470587" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="35"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.maskedCorners">
+                                        <integer key="value" value="3"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <segue destination="EQG-X4-pIn" kind="show" id="nrR-wF-Zmq"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MQ1-Ty-EUs">
-                                <rect key="frame" x="176" y="620" width="62" height="56"/>
+                                <rect key="frame" x="176" y="563.5" width="62" height="56"/>
                                 <color key="backgroundColor" red="1" green="0.69019607843137254" blue="0.22352941176470587" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="62" id="nS3-Wc-WnU"/>
@@ -54,7 +61,10 @@
                                 </state>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                        <integer key="value" value="4"/>
+                                        <integer key="value" value="29"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.maskedCorners">
+                                        <integer key="value" value="7"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                                 <connections>
@@ -62,54 +72,38 @@
                                 </connections>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="3TN-Hz-gZi">
-                                <rect key="frame" x="150" y="178.5" width="114.5" height="97"/>
+                                <rect key="frame" x="157" y="213" width="100" height="97"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="ftE-Wz-7MZ"/>
                                     <constraint firstAttribute="width" constant="100" id="otc-ih-Jy2"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Filipe Soares Câncio" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lmB-o3-JiR">
-                                <rect key="frame" x="112" y="326" width="190" height="24"/>
+                                <rect key="frame" x="112" y="371.5" width="190" height="24"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                 <color key="textColor" red="1" green="0.69019607843137254" blue="0.22352941176470587" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cancio" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jO5-91-D66">
-                                <rect key="frame" x="174" y="371" width="66" height="24"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="66" id="Mc9-wB-7sh"/>
-                                    <constraint firstAttribute="height" constant="24" id="m0i-xc-W4i"/>
-                                </constraints>
+                                <rect key="frame" x="174" y="405.5" width="66" height="24"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ID 234" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ugd-6K-34w">
-                                <rect key="frame" x="185" y="422" width="44" height="17"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="44" id="MEY-PE-wKH"/>
-                                    <constraint firstAttribute="height" constant="17" id="YSq-CL-uqe"/>
-                                </constraints>
+                                <rect key="frame" x="185" y="461.5" width="44" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="77 99922-2299" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gj1-Tf-NF8">
-                                <rect key="frame" x="155" y="444" width="104" height="17"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="104" id="6vo-pH-F6F"/>
-                                    <constraint firstAttribute="height" constant="17" id="JkY-qh-Quw"/>
-                                </constraints>
+                                <rect key="frame" x="155" y="483.5" width="104" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="filipe.cancio@gmail.com" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5nD-6t-ub9">
-                                <rect key="frame" x="127.5" y="400" width="159" height="17"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="17" id="ZZP-Tn-LpS"/>
-                                    <constraint firstAttribute="width" constant="157" id="lgM-Nu-b4J"/>
-                                </constraints>
+                                <rect key="frame" x="128.5" y="439.5" width="157" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -118,33 +112,26 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="0.17254901960784313" green="0.5490196078431373" blue="0.76078431372549016" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="3TN-Hz-gZi" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="150" id="1kn-ZE-CDY"/>
-                            <constraint firstItem="ugd-6K-34w" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="185" id="9j5-RY-4kQ"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ugd-6K-34w" secondAttribute="trailing" constant="185" id="Btf-cT-g2L"/>
-                            <constraint firstItem="MQ1-Ty-EUs" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="176" id="FiM-j8-m60"/>
-                            <constraint firstItem="MQ1-Ty-EUs" firstAttribute="top" secondItem="gj1-Tf-NF8" secondAttribute="bottom" constant="156" id="FkE-B6-PR3"/>
+                            <constraint firstItem="K95-Wm-Iko" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="2m5-db-tGT"/>
+                            <constraint firstItem="5nD-6t-ub9" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="4y8-uj-s5M"/>
+                            <constraint firstItem="MQ1-Ty-EUs" firstAttribute="centerX" secondItem="gj1-Tf-NF8" secondAttribute="centerX" id="BCG-2U-Wcg"/>
                             <constraint firstItem="K95-Wm-Iko" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="15" id="GaI-hr-68g"/>
+                            <constraint firstItem="3TN-Hz-gZi" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Gvy-PV-eFP"/>
+                            <constraint firstItem="5nD-6t-ub9" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="HGR-FF-m1B"/>
                             <constraint firstAttribute="bottom" secondItem="T6j-eW-7fh" secondAttribute="bottom" id="HzQ-kP-6iN"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="gj1-Tf-NF8" secondAttribute="trailing" constant="155" id="KPY-Tf-7el"/>
+                            <constraint firstItem="jO5-91-D66" firstAttribute="top" secondItem="lmB-o3-JiR" secondAttribute="bottom" constant="10" id="J90-qz-76E"/>
                             <constraint firstItem="T6j-eW-7fh" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Kyj-aZ-QlM"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="K95-Wm-Iko" secondAttribute="trailing" constant="165" id="QAm-Is-1Nd"/>
-                            <constraint firstItem="gj1-Tf-NF8" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="155" id="TCh-CY-jmo"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="5nD-6t-ub9" secondAttribute="trailing" constant="127.5" id="Uaw-qu-CS9"/>
-                            <constraint firstItem="gj1-Tf-NF8" firstAttribute="top" secondItem="ugd-6K-34w" secondAttribute="bottom" constant="5" id="Vpf-fa-AIg"/>
-                            <constraint firstItem="5nD-6t-ub9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="127.5" id="W8I-qc-B0a"/>
-                            <constraint firstItem="jO5-91-D66" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="174" id="WlS-wv-X50"/>
-                            <constraint firstItem="5nD-6t-ub9" firstAttribute="top" secondItem="jO5-91-D66" secondAttribute="bottom" constant="5" id="dZf-0X-11E"/>
-                            <constraint firstItem="lmB-o3-JiR" firstAttribute="top" secondItem="3TN-Hz-gZi" secondAttribute="bottom" constant="49" id="gGb-cY-XX3"/>
-                            <constraint firstItem="T6j-eW-7fh" firstAttribute="top" secondItem="MQ1-Ty-EUs" secondAttribute="bottom" constant="135" id="pJu-du-Pk5"/>
+                            <constraint firstItem="3TN-Hz-gZi" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Kyw-sv-mJD"/>
+                            <constraint firstItem="jO5-91-D66" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Mxp-uc-oZc"/>
+                            <constraint firstItem="gj1-Tf-NF8" firstAttribute="top" secondItem="ugd-6K-34w" secondAttribute="bottom" constant="5" id="Ofi-zv-Vcp"/>
+                            <constraint firstItem="ugd-6K-34w" firstAttribute="top" secondItem="5nD-6t-ub9" secondAttribute="bottom" constant="5" id="Vx3-P0-9Ey"/>
+                            <constraint firstItem="MQ1-Ty-EUs" firstAttribute="top" secondItem="gj1-Tf-NF8" secondAttribute="bottom" constant="60" id="go6-Rl-4OE"/>
+                            <constraint firstItem="lmB-o3-JiR" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="i3N-gI-eXj"/>
+                            <constraint firstItem="ugd-6K-34w" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="kqu-wm-VFY"/>
+                            <constraint firstItem="gj1-Tf-NF8" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="n5H-vX-gUk"/>
                             <constraint firstItem="T6j-eW-7fh" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="pqS-sh-lWh"/>
-                            <constraint firstItem="K95-Wm-Iko" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="165" id="qfl-yo-cyl"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="MQ1-Ty-EUs" secondAttribute="trailing" constant="176" id="qj1-Q0-dFX"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="3TN-Hz-gZi" secondAttribute="trailing" constant="149.5" id="u94-hy-It1"/>
-                            <constraint firstItem="jO5-91-D66" firstAttribute="top" secondItem="lmB-o3-JiR" secondAttribute="bottom" constant="21" id="uWp-vG-BUI"/>
-                            <constraint firstItem="ugd-6K-34w" firstAttribute="top" secondItem="5nD-6t-ub9" secondAttribute="bottom" constant="5" id="vXN-sG-22z"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="jO5-91-D66" secondAttribute="trailing" constant="174" id="xLK-Zk-I7N"/>
-                            <constraint firstItem="lmB-o3-JiR" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="112" id="xfi-EB-pPk"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="lmB-o3-JiR" secondAttribute="trailing" constant="112" id="zNk-XE-7di"/>
+                            <constraint firstItem="lmB-o3-JiR" firstAttribute="top" secondItem="3TN-Hz-gZi" secondAttribute="bottom" constant="60" id="q8q-j2-gGy"/>
+                            <constraint firstItem="5nD-6t-ub9" firstAttribute="top" secondItem="jO5-91-D66" secondAttribute="bottom" constant="10" id="urr-dy-XhJ"/>
                         </constraints>
                     </view>
                 </viewController>
